# Morning-Demon-Project-2

./: .gitignore  CMakeLists.txt  Graphics.cpp  Main.cpp  Main.h  Scene.cpp  Shader.cpp  Shader.h  Timer.cpp  Timer.h  Triangle.cpp  Triangle.h  Window.cpp
hlsl/: Triangle.PS  Triangle.VS
